--- a/templates/all_quotes.html
+++ b/templates/all_quotes.html
@@ -23,7 +23,7 @@ You haven't saved any quotes yet!
 {% if quotes %}
 {% for quote in quotes %}
   		<li>{{ quote['quote']}} <br> 
-  	    <i> - {{ quote['author'] }}</i>
+  	    <i> - {{ quote['author_name'] }}</i>
   		</li>
 {% endfor %}
 </ul>
